--- a/mod3/act6/index.html
+++ b/mod3/act6/index.html
@@ -28,9 +28,6 @@
           <li class="nav-item text-center">
             <a class="nav-link text-nowrap" href="productos-servicios.html">Productos y Servicios</a>
           </li>
-          <li class="nav-item text-center">
-            <a class="nav-link" href="#">Contacto</a>
-          </li>
         </ul>
       </div>
     </div>
@@ -39,31 +36,25 @@
 
   <main>
     <div class="jumbotron m-0">
-      <h1 class="text-center text-light">SPA Buenas Vacaciones</h1>
+      <h1 class="text-center">SPA Buenas Vacaciones</h1>
   </div>
   </main>
 
 
   <!--Footer-->
-  <footer class="text-center text-light bg-dark py-3">
-
-    <h6 class="py-2">Spa Buenas Vacaciones &copy; 2020</h6>
-
-    <hr class="w-75">
-
-    <a href="https://goo.gl/maps/utkDHHmy3DEa2jZJ8" target="_blank" class="text-muted text-decoration-none">
-      <div><span class="fa fa-address-card mr-2"></span>Av. Miguel Claro 2026 of. 303. Providencia,
+  <footer class="text-center text-light bg-dark py-2">
+    <h6 class="m-0 py-2">Spa Buenas Vacaciones &copy; 2020</h6>
+    <hr class="m-1 w-75">
+    <a href="https://goo.gl/maps/utkDHHmy3DEa2jZJ8" target="_blank" class="small text-muted text-decoration-none">
+      <div class="py-1"><span class="fa fa-address-card mr-2"></span>Av. Miguel Claro 2026 of. 303. Providencia,
         Santiago</div>
     </a>
-
-    <a href="mailto:buenasvacaciones@spa.com" class="text-muted text-decoration-none">
-      <div><span class="fa fa-envelope mr-2"></span>buenasvacaciones@spa.com</div>
+    <a href="mailto:buenasvacaciones@spa.com" class="small text-muted text-decoration-none">
+      <div class="py-1"><span class="fa fa-envelope mr-2"></span>buenasvacaciones@spa.com</div>
     </a>
-
-    <a href="tel:+56955555555" class="text-muted text-decoration-none">
-      <div><span class="fa fa-phone mr-2"></span>9 5555 5555</div>
+    <a href="tel:+56955555555" class=" small text-muted text-decoration-none">
+      <div class="py-1"><span class="fa fa-phone mr-2"></span>9 5555 5555</div>
     </a>
-
   </footer>
   <!--/Footer-->
 
