--- a/mod3/act6/productos-servicios.html
+++ b/mod3/act6/productos-servicios.html
@@ -22,14 +22,11 @@
             </button>
             <div class="collapse navbar-collapse" id="collapsableNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active text-center">
+                    <li class="nav-item text-center">
                         <a class="nav-link" href="index.html">Inicio</a>
                     </li>
-                    <li class="nav-item text-center">
+                    <li class="nav-item  active text-center">
                         <a class="nav-link text-nowrap" href="productos-servicios.html">Productos y Servicios</a>
-                    </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="#">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -38,9 +35,10 @@
     <!--/.Navegación-->
 
     <main>
+
         <h2 class="text-center my-4">Productos y Servicios</h2>
 
-        <div class="container">
+        <div class="container-fluid">
 
             <ul class="nav nav-tabs" role="tablist">
                 <li class="nav-item" role="presentation">
@@ -52,41 +50,111 @@
             </ul>
 
             <div class="tab-content" id="myTabContent">
-                
+
                 <div id="productos" class="tab-pane fade show active" role="tabpanel">
                     <h3>Productos</h3>
-                    <div class="row">
-                        <div class="col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/img-1.jpg">
+                    <div class="row justify-content-center">
+                        <div class="card col-sm-6 col-md-4 col-lg-3">
+                            <div class="card-body">
+                                <img src="img/productos/set-manos.webp" class="rounded-circle">
+                                <h5 class="card-title text-center">SPA de Manos</h5>
+                                <p class="card-text">Tratamiento reestructurante, es la evolución de la
+                                    parafinoterapia. Incluye agentes efecto sauna, hidronutritivos, revitalizantes,
+                                    exfoliantes, higienizantes.</p>
+                                <h6 class="card-title text-center font-weight-bold">$15.000</h6>
+                            </div>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/img-2.jpg">
+                        <div class="card col-sm-6 col-md-4 col-lg-3">
+                            <div class="card-body">
+                                <img src="img/productos/set-pies.webp" class="rounded-circle">
+                                <h5 class="card-title text-center">SPA de Pies</h5>
+                                <p class="card-text">Tratamiento nutritivo a base de urea que le devuelve la suavidad e
+                                    hidratación a los pies. Incluye agentes hidratantes, nutritivos, revitalizantes,
+                                    regeneradores, exfoliantes, suavizantes, descongestivos.</p>
+                                <h6 class="card-title text-center font-weight-bold">$15.000</h6>
+                            </div>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/img-3.jpg">
+                        <div class="card col-sm-6 col-md-4 col-lg-3">
+                            <div class="card-body">
+                                <img src="img/productos/set-facial.webp" class="rounded-circle">
+                                <h5 class="card-title text-center">SPA Facial</h5>
+                                <p class="card-text"> Incluye: Desmaquillante, limpiador, vaporizador, exfoliador,
+                                    máscara y elementos nutritivos.</p>
+                                <h6 class="card-title text-center font-weight-bold">$22.000</h6>
+                            </div>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/img-4.jpg">
-                        </div>
-                        <div class="col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/img-5.jpg">
-                        </div>
-                        <div class="col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/img-6.jpg">
+                        <div class="card col-sm-6 col-md-4 col-lg-3">
+                            <div class="card-body">
+                                <img src="img/productos/set-exofoliacion.webp" class="rounded-circle">
+                                <h5 class="card-title text-center">Exfoliación Corporal</h5>
+                                <p class="card-text">Coco natural más semillas de amapola.</p>
+                                <h6 class="card-title text-center font-weight-bold">$20.000</h6>
+                            </div>
                         </div>
                     </div>
                 </div>
 
                 <div id="servicios" class="tab-pane fade" role="tabpanel">
-                    <div class="card">
-                        <div class="card-body">
-                            <h3>Servicios</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem soluta quisquam dicta
-                                saepe,
-                                sed
-                                amet a quis labore explicabo reiciendis, natus repudiandae molestiae ad adipisci
-                                doloremque
-                                eveniet quibusdam, in unde!</p>
+                    <div class="row justify-content-center">
+                        <div class="card col-sm-6 col-md-4 col-lg-3">
+                            <div class="card-body">
+                                <img src="img/servicios/masaje.webp" class="rounded-circle">
+                                <h5 class="card-title text-center">Masaje Relajación</h5>
+                                <p class="card-text">Masaje especialmente creado para eliminar toda la carga negativa
+                                    del cuerpo, entregada por una vida agitada y con complicaciones de la vida diaria.
+                                </p>
+                                <h6 class="card-title text-center font-weight-bold">$19.000</h6>
+                            </div>
+                        </div>
+                        <div class="card col-sm-6 col-md-4 col-lg-3">
+                            <div class="card-body">
+                                <img src="img/servicios/chakras.webp" class="rounded-circle">
+                                <h5 class="card-title text-center">Cuencos Tibetanos</h5>
+                                <p class="card-text">Armonización de chackras y limpieza de aura con cuencos tibetanos.
+                                </p>
+                                <h6 class="card-title text-center font-weight-bold">$32.000</h6>
+                            </div>
+                        </div>
+                        <div class="card col-sm-6 col-md-4 col-lg-3">
+                            <div class="card-body">
+                                <img src="img/servicios/flores-bach.webp" class="rounded-circle">
+                                <h5 class="card-title text-center">Flores de Bach</h5>
+                                <p class="card-text">Sistema de sanación complementario a la medicina tradicional, que
+                                    descansa en el poder curativo de las plantas y que va dirigido fundamentalmente a la
+                                    sanación de aquellas emociones mórbidas que tanto sufrimiento causan al ser humano
+                                </p>
+                                <h6 class="card-title text-center font-weight-bold">$20.000</h6>
+                            </div>
+                        </div>
+                        <div class="card col-sm-6 col-md-4 col-lg-3">
+                            <div class="card-body">
+                                <img src="img/servicios/piedras-clientes.webp" class="rounded-circle">
+                                <h5 class="card-title text-center">Piedras Calientes</h5>
+                                <p class="card-text">Masaje especial para calmar el estrés,
+                                    la hiperactividad del sistema nervioso, nos da una pausa y nos permite el
+                                    reencuentro con el cuerpo y los sentidos.
+                                </p>
+                                <h6 class="card-title text-center font-weight-bold">$20.000</h6>
+                            </div>
+                        </div>
+                        <div class="card col-sm-6 col-md-4 col-lg-3">
+                            <div class="card-body">
+                                <img src="img/servicios/reiki.webp" class="rounded-circle">
+                                <h5 class="card-title text-center">Reiki Usui</h5>
+                                <p class="card-text">La Terapia de Reiki es Medicina Natural, energía universal que
+                                    actúa sanando los desafíos de salud en los cuatro niveles: emocional, mental, físico
+                                    y espiritual.
+                                </p>
+                                <h6 class="card-title text-center font-weight-bold">$17.000</h6>
+                            </div>
+                        </div>
+                        <div class="card col-sm-6 col-md-4 col-lg-3">
+                            <div class="card-body">
+                                <img src="img/servicios/tarot.webp" class="rounded-circle">
+                                <h5 class="card-title text-center">Tarot Terapéutico</h5>
+                                <p class="card-text">Sesión de 60 minutos.</p>
+                                <h6 class="card-title text-center font-weight-bold">$32.000</h6>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -102,25 +170,19 @@
 
 
     <!--Footer-->
-    <footer class="text-center text-light bg-dark py-3">
-
-        <h6 class="py-2">Spa Buenas Vacaciones &copy; 2020</h6>
-
-        <hr class="w-75">
-
-        <a href="https://goo.gl/maps/utkDHHmy3DEa2jZJ8" target="_blank" class="text-muted text-decoration-none">
-            <div><span class="fa fa-address-card mr-2"></span>Av. Miguel Claro 2026 of. 303. Providencia,
+    <footer class="text-center text-light bg-dark py-2">
+        <h6 class="m-0 py-2">Spa Buenas Vacaciones &copy; 2020</h6>
+        <hr class="m-1 w-75">
+        <a href="https://goo.gl/maps/utkDHHmy3DEa2jZJ8" target="_blank" class="small text-muted text-decoration-none">
+            <div class="py-1"><span class="fa fa-address-card mr-2"></span>Av. Miguel Claro 2026 of. 303. Providencia,
                 Santiago</div>
         </a>
-
-        <a href="mailto:buenasvacaciones@spa.com" class="text-muted text-decoration-none">
-            <div><span class="fa fa-envelope mr-2"></span>buenasvacaciones@spa.com</div>
+        <a href="mailto:buenasvacaciones@spa.com" class="small text-muted text-decoration-none">
+            <div class="py-1"><span class="fa fa-envelope mr-2"></span>buenasvacaciones@spa.com</div>
         </a>
-
-        <a href="tel:+56955555555" class="text-muted text-decoration-none">
-            <div><span class="fa fa-phone mr-2"></span>9 5555 5555</div>
+        <a href="tel:+56955555555" class=" small text-muted text-decoration-none">
+            <div class="py-1"><span class="fa fa-phone mr-2"></span>9 5555 5555</div>
         </a>
-
     </footer>
     <!--/Footer-->
 
