[M3A6] Agrega título a servicios

--- a/mod3/act6/productos-servicios.html
+++ b/mod3/act6/productos-servicios.html
@@ -38,9 +38,9 @@
 
         <h2 class="text-center my-4">Productos y Servicios</h2>
 
-        <div class="container-fluid">
+        <div class="container">
 
-            <ul class="nav nav-tabs" role="tablist">
+            <ul class="nav nav-tabs justify-content-end" role="tablist">
                 <li class="nav-item" role="presentation">
                     <a href="#productos" class="nav-link active" data-toggle="tab" role="tab">Productos</a>
                 </li>
@@ -50,9 +50,8 @@
             </ul>
 
             <div class="tab-content" id="myTabContent">
-
                 <div id="productos" class="tab-pane fade show active" role="tabpanel">
-                    <h3>Productos</h3>
+                    <h3 class="ml-2">Productos</h3>
                     <div class="row justify-content-center">
                         <div class="card col-sm-6 col-md-4 col-lg-3">
                             <div class="card-body">
@@ -95,6 +94,7 @@
                 </div>
 
                 <div id="servicios" class="tab-pane fade" role="tabpanel">
+                    <h3 class="ml-2">Servicios</h3>
                     <div class="row justify-content-center">
                         <div class="card col-sm-6 col-md-4 col-lg-3">
                             <div class="card-body">
