--- a/mod3/act9/index.html
+++ b/mod3/act9/index.html
@@ -11,10 +11,10 @@
 <body>
 
     <div class="container">
-        <h1 class="my-4 text-center">Formulario de Registro</h1>
-        <div class="row justify-content-center">
+        <h1 class="pt-4 text-center">Formulario de Registro</h1>
+        <div class="row justify-content-center py-4">
             <!--Formulario de registro-->
-            <form id="registro" class="p-3 w-50 border-dark shadow-lg needs-validation" novalidate>
+            <form id="registro" class="col-sm-10 col-md-8 col-lg-6 col-xl-5 p-3 border-dark shadow-lg needs-validation" novalidate>
                 <!--Nombre-->
                 <div class="form-group">
                     <label for="nombre">Nombre</label>
