--- a/mod3/eval1/results.html
+++ b/mod3/eval1/results.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <h1 class="text-center mb-4">Datos Formulario</h1>
+  <h1 class="text-center my-4">Datos Formulario</h1>
   <div id="results" class="text-center"></div>
   <div class="d-flex justify-content-center">
-    <a href="./index.html" class="btn btn-primary m-5">Volver</a>
+    <a href="./index.html" class="btn btn-primary m-4">Volver</a>
   </div>
 
   <script>
