Actualiza README.md

--- a/mod3/act10/index.html
+++ b/mod3/act10/index.html
@@ -123,6 +123,7 @@
         valorDown.otroValor = valorUp;
         valorDown.error = errorDown;
 
+        // TODO: Utilizar JSON para actualizar las tasas
         // tasas de cambio
         var tasa = {
             usd: 779.50,
