[M3A14] Agrega botón borrar item al carro de compra

--- a/mod3/act14/registro.html
+++ b/mod3/act14/registro.html
@@ -38,9 +38,9 @@
         <!-- Indicadores Económicos -->
         <marquee id="indicadores" behavior="scroll" scrollamount="2" direction="left">
             <span>Indicadores Económicos (<span id="fecha"></span>):</span>
-            <span>UF = $<span id="uf"></span></span>
-            <span>UTM = $<span id="utm"></span></span>
-            <span>Dolar = $<span id="dolar"></span></span>
+            <span>UF = <span id="uf"></span></span>
+            <span>UTM = <span id="utm"></span></span>
+            <span>Dolar = <span id="dolar"></span></span>
         </marquee>
 
         <!--Formulario de registro-->
