--- a/mod3/act14/carrito.html
+++ b/mod3/act14/carrito.html
@@ -39,9 +39,9 @@
         <!-- Indicadores Económicos -->
         <marquee id="indicadores" behavior="scroll" scrollamount="2" direction="left">
             <span>Indicadores Económicos (<span id="fecha"></span>):</span>
-            <span>UF = $<span id="uf"></span></span>
-            <span>UTM = $<span id="utm"></span></span>
-            <span>Dolar = $<span id="dolar"></span></span>
+            <span>UF = <span id="uf"></span></span>
+            <span>UTM = <span id="utm"></span></span>
+            <span>Dolar = <span id="dolar"></span></span>
         </marquee>
 
         <!-- Venta -->
@@ -67,6 +67,7 @@
                                     <th>Precio</th>
                                     <th>Cantidad</th>
                                     <th>SubTotal</th>
+                                    <th>Borrar</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -76,7 +77,7 @@
                     <!-- Subtotal -->
                     <div class="d-flex justify-content-between">
                         <div>Total:</div>
-                        <div>$ <span class="totalVenta">0</span></div>
+                        <div> <span class="totalVenta">$0</span></div>
                     </div>
                 </div>
                 <!-- Botones Totalizar y Cancelar venta -->
@@ -106,7 +107,7 @@
                         <p class="mb-0">Nombre: <span id="nombreCliente"></span></p>
                         <p class="mb-0">Apellido: <span id="apellidoCliente"></span></p>
                         <p class="mb-0">Correo: <span id="emailCliente"></span></p>
-                        <h4 class="my-3 d-flex justify-content-between">Total a pagar:<span class="d-inline-block">$<span class="totalVenta"></span></span></h4>
+                        <h4 class="my-3 d-flex justify-content-between">Total a pagar:<span class="d-inline-block"><span class="totalVenta"></span></span></h4>
                         <div id="imprimir-boleta" class="d-flex flex-column align-items-center"></div>
                     </div>
                     <div class="modal-footer">
