[M3A14] Mejora validación de formularios

--- a/mod3/act14/carrito.html
+++ b/mod3/act14/carrito.html
@@ -67,7 +67,7 @@
                                     <th>Precio</th>
                                     <th>Cantidad</th>
                                     <th>SubTotal</th>
-                                    <th>Borrar</th>
+                                    <th>SubTotal</th>
                                 </tr>
                             </thead>
                             <tbody>
