--- a/mod3/act14/registro.html
+++ b/mod3/act14/registro.html
@@ -51,42 +51,42 @@
                     <!--Rut-->
                     <div class="form-group">
                         <label for="rut">Rut</label>
-                        <input type="text" id="rut" name="rut" class="form-control validar rut" placeholder="12345678-9"
-                            title="Ingrese rut sin puntos y con guión" value="13658100-5">
+                        <input type="text" id="rut" name="rut" class="form-control validar validar-rut" placeholder="12345678-9"
+                            title="Ingrese rut sin puntos y con guión" value="11111111-5">
                         <div class="invalid-feedback"></div>
                     </div>
                     <!--Nombre-->
                     <div class="form-group">
                         <label for="nombre">Nombre</label>
-                        <input type="text" id="nombre" name="nombre" class="form-control validar texto"
-                            placeholder="Alan">
+                        <input type="text" id="nombre" name="nombre" class="form-control validar validar-texto"
+                            placeholder="Alan" value="Alan Brito">
                         <div class="invalid-feedback"></div>
                     </div>
                     <!--Apellido-->
                     <div class="form-group">
                         <label for="nombre">Apellido</label>
-                        <input type="text" id="apellido" name="apellido" class="form-control validar texto"
+                        <input type="text" id="apellido" name="apellido" class="form-control validar validar-texto"
                             placeholder="Brito" value="Brito">
                         <div class="invalid-feedback"></div>
                     </div>
                     <!--Dirección-->
                     <div class="form-group">
                         <label for="nombre">Dirección</label>
-                        <input type="text" id="direccion" name="direccion" class="form-control validar requerido"
+                        <input type="text" id="direccion" name="direccion" class="form-control validar validar-requerido"
                             placeholder="Ingrese su dirección" value="Dirección falsa 123">
                         <div class="invalid-feedback"></div>
                     </div>
                     <!--Teléfono-->
                     <div class="form-group">
                         <label for="nombre">Teléfono</label>
-                        <input type="text" id="telefono" name="telefono" class="form-control validar telefono"
+                        <input type="text" id="telefono" name="telefono" class="form-control validar validar-telefono"
                             placeholder="+569 5555 5555" value="+56912345678">
                         <div class="invalid-feedback"></div>
                     </div>
                     <!--Email-->
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="text" id="email" name="email" class="form-control validar email"
+                        <input type="text" id="email" name="email" class="form-control validar validar-email"
                             placeholder="alanbrito@email.com" value="fake@email.com">
                         <div class="invalid-feedback"></div>
                     </div>
